fixed phantom space and desktop spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Overpass+Mono:400,600,700|Rubik:400,500");
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
 .s_allContent {
-  margin-left: 10rem;
+  margin-left: auto;
   margin-right: auto;
+  width: 100vw;
+  height: 100vh;
 }
 
 .s_splitscreen {
@@ -12,15 +14,17 @@
 
 .s_topSpace {
   margin-top: 60px;
+  margin-left: auto;
+  margin-right: 5vw;
 }
 
 .s_main {
-  max-width: 40rem;
+  max-width: 50vw;
   width: 40rem;
 }
 
 .s_map {
-  width: 100%;
+  width: 40vw;
 }
 
 .s_user {
@@ -29,6 +33,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  display: none;
 }
 
 .s_header {
@@ -102,17 +107,19 @@
 
 @media screen and (max-width: 480px) {
   .s_allContent {
-    width: 100%;
     padding: 12px;
     margin: 0;
   }
 
   .s_topSpace {
     margin-top: 12px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .s_header {
-    margin-bottom: 12px;
+    margin-bottom: 2vh;
+    height: 18vh;
   }
 
   .s_main {
@@ -167,21 +174,25 @@
   .s_header_title_m {
     display: block;
     padding-left: 6px;
-    width: 20rem;
   }
 
   .s_list {
-    flex: 1 1 auto;
+    height: 70vh;
   }
 }
 @media screen and (max-width: 375px) {
   .s_list {
-    height: 24rem;
+    height: 70vh;
   }
 }
 @media screen and (max-width: 360px) {
   .s_list {
-    height: 24rem;
+    height: 70vh;
+  }
+
+  .s_header {
+    margin-bottom: 2vh;
+    height: 20vh;
   }
 
   .s_header_title_light {
